# foreignfree

./: Cargo.toml  build.rs
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/example/foreignfree/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/: uniffi
Android/app/src/main/java/com/example/foreignfree/: MainActivity.kt
Android/app/src/main/java/com/example/foreignfree/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/example/foreignfree/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
src/: foreignfree.udl  lib.rs
uniffi/foreignfree/: foreignfree.kt
